--- a/index.html
+++ b/index.html
@@ -177,13 +177,11 @@
           </div>
         </div>
 
-        <!-- Reference screenshots (collapsible) -->
+        <!-- Reference screenshots (collapsible): add images to assets/ with short names to compare styling -->
         <details class="ref-panel">
           <summary>Reference Screenshots (compare styling)</summary>
           <div class="ref-imgs">
-            <img src="assets/c__Users_fards_AppData_Roaming_Cursor_User_workspaceStorage_18b52647e6c70ae20a4a7a946bd42886_images_image-50c8559a-1cf8-4a71-9862-7d7a923ae957.png" alt="Main Menu" onerror="this.style.display='none'">
-            <img src="assets/c__Users_fards_AppData_Roaming_Cursor_User_workspaceStorage_18b52647e6c70ae20a4a7a946bd42886_images_image-11508493-7627-4654-97a7-ff8d739cde31.png" alt="Multiplayer Quick Match" onerror="this.style.display='none'">
-            <img src="assets/c__Users_fards_AppData_Roaming_Cursor_User_workspaceStorage_18b52647e6c70ae20a4a7a946bd42886_images_image-f2725b69-e738-4235-9343-1048ff346668.png" alt="Multiplayer Find Match" onerror="this.style.display='none'">
+            <p class="text-muted">Add reference screenshots to the <code>assets/</code> folder (e.g. <code>main-menu.png</code>, <code>multiplayer.png</code>) to compare with this prototype.</p>
           </div>
         </details>
       </div>
